--- a/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj.filters
+++ b/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="DXUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DXERR\dxerr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DXApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DXUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DXERR\dxerr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
