--- a/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj.filters
+++ b/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj.filters
@@ -39,4 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="D3DCompile explained.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="shaders.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
