Implimented multible object rendering

--- a/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj
+++ b/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj
@@ -75,15 +75,13 @@
     <ClCompile Include="DXApp.cpp" />
     <ClCompile Include="DXERR\dxerr.cpp" />
     <ClCompile Include="DXUtil.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="winmain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DXApp.h" />
     <ClInclude Include="DXERR\dxerr.h" />
     <ClInclude Include="DXUtil.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Text Include="D3DCompile explained.txt" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders.hlsl">
