--- a/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj
+++ b/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj
@@ -76,12 +76,15 @@
     <ClCompile Include="DXERR\dxerr.cpp" />
     <ClCompile Include="DXUtil.cpp" />
     <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="winmain.cpp" />
+    <ClCompile Include="Hello_DirectX11.cpp" />
+    <ClCompile Include="RenderController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DXApp.h" />
     <ClInclude Include="DXERR\dxerr.h" />
     <ClInclude Include="DXUtil.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="RenderController.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="shaders.hlsl">
