--- a/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj.filters
+++ b/Hello_DirectX11/Hello_DirectX11/Hello_DirectX11.vcxproj.filters
@@ -19,33 +19,54 @@
     <Filter Include="Resources\Shaders">
       <UniqueIdentifier>{e9fd7ec9-1f9b-4f2b-a015-b46fc430507f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Model\Entity">
+      <UniqueIdentifier>{a56ce593-499a-4d2f-855e-aeb36bcf6e86}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Controller\DXUtil">
+      <UniqueIdentifier>{5d64132e-cd74-424e-a6a6-b52293835bce}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="View\DXApp">
+      <UniqueIdentifier>{184e3d74-d394-4ae9-9614-1a684d0f0893}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Model\RenderController">
+      <UniqueIdentifier>{ce6d4705-443a-4894-ac60-960ae88b9db1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="winmain.cpp">
-      <Filter>Controller</Filter>
-    </ClCompile>
-    <ClCompile Include="DXApp.cpp">
-      <Filter>View</Filter>
-    </ClCompile>
-    <ClCompile Include="DXUtil.cpp">
-      <Filter>Controller</Filter>
-    </ClCompile>
     <ClCompile Include="DXERR\dxerr.cpp">
       <Filter>Resources\DXERR</Filter>
     </ClCompile>
     <ClCompile Include="Entity.cpp">
-      <Filter>Model</Filter>
+      <Filter>Model\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="Hello_DirectX11.cpp">
+      <Filter>Controller</Filter>
+    </ClCompile>
+    <ClCompile Include="DXUtil.cpp">
+      <Filter>Controller\DXUtil</Filter>
+    </ClCompile>
+    <ClCompile Include="DXApp.cpp">
+      <Filter>View\DXApp</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderController.cpp">
+      <Filter>Model\RenderController</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DXApp.h">
-      <Filter>View</Filter>
-    </ClInclude>
-    <ClInclude Include="DXUtil.h">
-      <Filter>Controller</Filter>
-    </ClInclude>
     <ClInclude Include="DXERR\dxerr.h">
       <Filter>Resources\DXERR</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>Model\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="DXUtil.h">
+      <Filter>Controller\DXUtil</Filter>
+    </ClInclude>
+    <ClInclude Include="DXApp.h">
+      <Filter>View\DXApp</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderController.h">
+      <Filter>Model\RenderController</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
